--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -20,6 +20,12 @@
             The specified category does not exist!
         {% endif %}
     </div>
-  <a href="/rango/">Back to main page</a><br />
+
+    <div>
+		{% if category %}
+			<a href="/rango/category/{{category.slug}}/add_page/">Add Page</a> <br/>
+		{% endif %}
+         <a href="/rango/">Back to main page</a><br/>
+    </div>
 </body>
 </html>
