--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -39,6 +39,7 @@
         </div>
 
         <div>
+            <a href="/rango/add_category/">Add a new Category</a><br />
             <a href="/rango/about/">About Rango</a><br />
             <img src="{% static "images/rango.jpg" %}"
                  alt="Picture of Rango" />
