--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,30 +1,25 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-{%  load staticfiles  %}
+{% block title_block %}
+    About
+{% endblock %}
 
-<html>
-
-    <head>
-        <title>About</title>
-    </head>
-
-    <body>
+{% block body_block %}
         <h1>About...</h1>
         <div>
             This tutorial has been put together by <br/>
             <strong>{{ myName }}</strong><br/><br/>
         </div>
 
-        <div></div>
+        <div>
             <img src="{% static "images/rango-quad.jpg" %}"
                  alt="Picture of Rango and a Fish" /><br/><br/>
          </div>
+
         <div>
            <p style="color:DarkRed;">Oh... and this is a cat:</p>
               <img src="{{ MEDIA_URL }}cat.jpg"
                    alt="Picture of Marty the Cat" /><br/><br/>
-        <a href="/rango/">Back to main page</a><br />
         </div>
-    </body>
-
-</html>
+{% endblock %}
