--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Rango</title>
-</head>
-<body>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+    Add a Page
+{% endblock %}
+{% block body_block %}
         {% if category %}
 
     <h1>Add a Page to {{ category.name }}</h1>
      <div>
-            <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
+            <form id="page_form" method="post" action="{% url 'add_page' category.slug %}">
                 {% csrf_token %}
                 {% for hidden in form.hidden_fields %}
                     {{ hidden }}
@@ -20,11 +21,8 @@
                 {% endfor %}
                 <input type="submit" name="submit" value="Add Page" />
             </form>
-        </div>
-
         {% else %}
             A category by this name does not exist!
         {% endif %}
-
-</body>
-</html>
+    </div>
+{% endblock %}
