--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Rango</title>
-</head>
-<body>
-    <div>
-        {% if category %}
-            <h1>{{ category.name }}</h1>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+    {{ category.name }}
+{% endblock %}
+
+{% block body_block %}
+    {% if category %}
+        <h1>{{ category.name }}</h1>
+
             {% if pages %}
                 <ul>
                     {% for page in pages %}
@@ -14,18 +16,10 @@
                     {% endfor %}
                 </ul>
             {% else %}
-                <strong>No pages currently in category.</strong>
+                <strong>No pages currently in category.</strong></br></br>
             {% endif %}
+        <a href="{% url 'add_page' category.slug %}">Add a Page</a>
         {% else %}
             The specified category does not exist!
         {% endif %}
-    </div>
-
-    <div>
-		{% if category %}
-			<a href="/rango/category/{{category.slug}}/add_page/">Add Page</a> <br/>
-		{% endif %}
-         <a href="/rango/">Back to main page</a><br/>
-    </div>
-</body>
-</html>
+{% endblock %}
