--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-{%  load staticfiles  %}
+{% block title_block %}
+   Index
+{% endblock %}
 
-<html>
-
-    <head>
-        <title>Rango</title>
-    </head>
-
-    <body>
+{% block body_block %}
         <h1>Rango says...</h1>
         <div>hey there partner!</div>
 
@@ -17,7 +14,7 @@
             {% if categories %}
             <ul>
                 {% for category in categories %}
-                <li><a href="/rango/category/{{ category.slug }}">{{ category.name }}</a></li>
+                <li><a href="{% url 'show_category' category.slug %}">{{ category.name }}</a></li>
                 {% endfor %}
             </ul>
         {% else %}
@@ -39,11 +36,7 @@
         </div>
 
         <div>
-            <a href="/rango/add_category/">Add a new Category</a><br />
-            <a href="/rango/about/">About Rango</a><br />
             <img src="{% static "images/rango.jpg" %}"
                  alt="Picture of Rango" />
         </div>
-    </body>
-
-</html>
+{% endblock %}
