--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -26,9 +26,18 @@
         <hr/>
         <div>
             <ul>
-				<li><a href="{% url 'add_category' %}">Add a New Category</a></li>
-				<li><a href="{% url 'about' %}">About</a></li>
-				<li><a href="{% url 'index' %}">Index</a></li>
+				<ul>
+                    {% if user.is_authenticated %}
+                        <li><a href="{% url 'add_category' %}">Add a New Category</a></li>
+                        <li><a href="{% url 'restricted' %}">Restricted Page</a></li>
+                        <li><a href="{% url 'logout' %}">Logout</a></li>
+                    {% else %}
+                        <li><a href="{% url 'login' %}">Login</a></li>
+                        <li><a href="{% url 'register' %}">Sign Up</a></li>
+                    {% endif %}
+                        <li><a href="{% url 'about' %}">About</a></li>
+                        <li><a href="{% url 'index' %}">Index</a></li>
+                    </ul>
 			</ul>
         </div>
     </body>
