--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -13,6 +13,10 @@
         </div>
 
         <div>
+            <p>Howdy! Wow, your visit count: {{ visits }}</p>
+        </div>
+
+        <div>
             <img src="{% static "images/rango-quad.jpg" %}"
                  alt="Picture of Rango and a Fish" /><br/><br/>
          </div>
