minor bug fix for tests

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -13,7 +13,7 @@
         </div>
 
         <div>
-            <p>Howdy! Wow, your visit count: {{ visits }}</p>
+            <p>Howdy! Wow, your visit count - visits: {{ visits }}</p>
         </div>
 
         <div>
