--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -30,10 +30,11 @@
                     {% if user.is_authenticated %}
                         <li><a href="{% url 'add_category' %}">Add a New Category</a></li>
                         <li><a href="{% url 'restricted' %}">Restricted Page</a></li>
-                        <li><a href="{% url 'logout' %}">Logout</a></li>
+                        <li><a href="{% url 'auth_logout' %}?next=/rango/">Logout</a></li>
+                        <li><a href="{% url 'auth_password_change' %}?next=/{% url 'password_change_done' %}">Change Password</a></li>
                     {% else %}
-                        <li><a href="{% url 'login' %}">Login</a></li>
-                        <li><a href="{% url 'register' %}">Sign Up</a></li>
+                        <li><a href="{% url 'auth_login' %}">Login</a></li>
+                        <li><a href="{% url 'registration_register' %}">Sign Up</a></li>
                     {% endif %}
                         <li><a href="{% url 'about' %}">About</a></li>
                         <li><a href="{% url 'index' %}">Index</a></li>
