--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,28 +1,31 @@
 {% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-{% block title_block %}
-    Add a Page
+{% block title %}
+    Add Page
 {% endblock %}
+
 {% block body_block %}
         {% if category %}
+            <form role="form" id="page_form" method="post" action="/rango/category/{{category.slug}}/add_page/">
 
-    <h1>Add a Page to {{ category.name }}</h1>
-     <div>
-            <form id="page_form" method="post" action="{% url 'add_page' category.slug %}">
+                <h2 class="form-signin-heading"> Add a Page to <a href="/rango/category/{{category.slug}}/">
+                    {{ category.name }}</a></h2>
                 {% csrf_token %}
                 {% for hidden in form.hidden_fields %}
                     {{ hidden }}
                 {% endfor %}
                 {% for field in form.visible_fields %}
                     {{ field.errors }}
-                    {{ field.help_text }}
-                    {{ field }}
+                    {{ field.help_text }}<br/>
+                    {{ field }}<br/>
                 {% endfor %}
-                <input type="submit" name="submit" value="Add Page" />
+                <br/>
+                <button class="btn btn-primary" type="submit" name="submit">
+                    Add Page
+                </button>
             </form>
         {% else %}
-            A category by this name does not exist!
+            <p>This is category does not exist.</p>
         {% endif %}
-    </div>
 {% endblock %}
